--- a/eProject/index.html
+++ b/eProject/index.html
@@ -21,6 +21,27 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <script
+      src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+      crossorigin="anonymous"
+    ></script>
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn"
+    crossorigin="anonymous"
+  />
 </head>
 <body>
 <div id="container">
@@ -35,9 +56,102 @@
             <li><button name="search" type="button"><span class="ti-search"></span></button></li>
         </ul>
     </div>
-    <div id="banner">
-
-    </div>
+    <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div
+              id="carouselExampleCaptions"
+              class="carousel slide"
+              data-ride="carousel"
+            >
+              <ol class="carousel-indicators">
+                <li
+                  data-target="#carouselExampleCaptions"
+                  data-slide-to="0"
+                  class="active"
+                ></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-interval="5000">
+                  <img
+                    src="img/Banner/Astraeus Wilderness (1).png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <button class="btn btn-outline-light btn-lg">
+                      VIEW MORE
+                    </button>
+                  </div>
+                </div>
+                <div class="carousel-item" data-interval="5000">
+                  <img
+                    src="img/Banner/Astraeus Wilderness.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <button class="btn btn-outline-light btn-lg">
+                      VIEW MORE
+                    </button>
+                  </div>
+                </div>
+                <div class="carousel-item" data-interval="5000">
+                  <img
+                    src="img/Banner/Diaries and moments (3).png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                  <div class="carousel-caption d-none d-md-block">
+                    <button class="btn btn-outline-light btn-lg">
+                      VIEW MORE
+                    </button>
+                  </div>
+                </div>
+              <div class="carousel-item" data-interval="5000">
+                <img
+                  src="img/Banner/Astraeus Wilderness (2).png"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div class="carousel-caption d-none d-md-block">
+                  <button class="btn btn-outline-light btn-lg">
+                    VIEW MORE
+                  </button>
+                </div>
+              </div>
+            </div>
+              <button
+                class="carousel-control-prev"
+                type="button"
+                data-target="#carouselExampleCaptions"
+                data-slide="prev"
+              >
+                <span
+                  class="carousel-control-prev-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Previous</span>
+              </button>
+              <button
+                class="carousel-control-next"
+                type="button"
+                data-target="#carouselExampleCaptions"
+                data-slide="next"
+              >
+                <span
+                  class="carousel-control-next-icon"
+                  aria-hidden="true"
+                ></span>
+                <span class="sr-only">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     <div id="content">
 
     </div>
