--- a/eProject/index.html
+++ b/eProject/index.html
@@ -10,6 +10,7 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -20,7 +21,10 @@
     <link rel="stylesheet" href="css/nice-select.css" type="text/css">
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/Tabs.css" type="text/css">
 </head>
 <body>
 <div id="container">
@@ -31,20 +35,111 @@
             <li><a href="#">News</a></li>
             <li><a href="#">Products</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Contain</a></li>
+            <li><a href="#">Contact</a></li>
             <li><button name="search" type="button"><span class="ti-search"></span></button></li>
         </ul>
     </div>
-    <div id="banner">
 
-    </div>
-    <div id="content">
-
-    </div>
-    <div id="footer">
-
+    <div id="page-content">
+        <h2>DISCOVER UNIQUE CALENDARS</h2>
+        <div class="tabs">
+            <div class="tab-item active">
+                WALL CALENDAR
+            </div>
+            <div class="tab-item">
+                DESK CALENDAR
+            </div>
+            <div class="tab-item">
+                CALENDAR STICKERS
+            </div>
+            <div class="tab-item">
+                CALENDAR BOOK
+            </div>
+            <div class="line"></div>
+        </div>
+        <div class="tab-content">
+            <div class="tab-pane active">
+                <div class="product">
+                    <img src="img/pd-1.webp" class="pd-1"><br>
+                    <p>2022 Calendar | Hanging wall Calendar | 11.5" x 16"</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-2.webp" class="pd-2"><br>
+                    <p>2022 Illustrated Wall Calendar</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-3.jpg" class="pd-3"><br>
+                    <p>12 Month Wall Calendar 2022</p>
+                    <a href="#">More...</a>
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="product">
+                    <img src="img/pd-4.jpg" class="pd-4"><br>
+                    <p>2022 New Years Vertical Desk Calendar</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-5.jpg" class="pd-5"><br>
+                    <p>2022 Desk Calendar, Dry Erase Desk Month Calendar on Wood stand</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-6.webp" class="pd-6"><br>
+                    <p>2022 National Park Desk Calendar</p>
+                    <a href="#">More...</a>
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="product">
+                    <img src="img/pd-7.jpg" class="pd-7"><br>
+                    <p>Enchanted Calendar Sticker 2022 | Bullet Journal Stickers</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-8.jpg" class="pd-8"><br>
+                    <p>2022 Calendar STICKER Set (12 Month) minimal or illustration Planner Stickers</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-9.jpg" class="pd-9"><br>
+                    <p>Stickers Calendar 2022 for bullet journal - Kraft</p>
+                    <a href="#">More...</a>
+                </div>
+            </div>
+            <div class="tab-pane">
+                <div class="product">
+                    <img src="img/pd-10.webp" class="pd-10"><br>
+                    <p>Perpetual Birthday Calendar,Perpetual Planner</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-11.webp" class="pd-11"><br>
+                    <p>Monthly Planner, 15 Months, Undated Sheets, Calendar Task and To-Do List Planner</p>
+                    <a href="#">More...</a>
+                </div>
+                <div class="product">
+                    <img src="img/pd-12.jpg" class="pd-12"><br>
+                    <p>2022 Planner, Personalised Planner, Weekly Planner</p>
+                    <a href="#">More...</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/jquery.countdown.min.js"></script>
+<script src="js/jquery.nice-select.min.js"></script>
+<script src="js/jquery.zoom.min.js"></script>
+<script src="js/jquery.dd.min.js"></script>
+<script src="js/jquery.slicknav.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>
+<script src="js/Tabs.js"></script>
 </body>
 </html>
